<resources>
    <string name="app_name">SL planner</string>
    <string name="loading_data">loading data</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="go">GO</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="any_trip">Any trip</string>
    <string name="departure">departure</string>
    <string name="arrival">arrival</string>
    <string name="previous_trips">previous trips</string>
    <string name="next_trips">next trips</string>
    <string name="clock">clock</string>
    <string name="calendar">calendar</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="line">line</string>
    <string name="direction">direction</string>
    <string name="export">export</string>
</resources>