<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="1dp"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:background="#0C000000">


    <LinearLayout
        android:id="@+id/ll_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/departure_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/arrival_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="3" />

        <ImageButton
            android:id="@+id/img_btn_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_export"
            android:contentDescription="@string/export"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_times" >

        <TextView
            android:id="@+id/transport_list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_below="@id/ll_string"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/line_nr_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/line"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/direction_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/direction" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_time_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/time"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/stop_time_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_stop_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/start"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/stop_stop_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/stop" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:layout_below="@id/ll_line1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/line_nr_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/line"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/direction_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/direction" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_time_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/time"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/stop_time_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_stop_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/start"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/stop_stop_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/stop" />

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_below="@id/ll_line2"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/line_nr_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/line"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/direction_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/direction" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_time_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/time"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/stop_time_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_stop_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/start"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/stop_stop_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/stop" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:layout_below="@id/ll_line3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/line_nr_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/line"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/direction_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/direction" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_time_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="time"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/stop_time_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_stop_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/start"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/stop_stop_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/stop" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>